# mwo-quirker

./: Cargo.toml
src/: lib.rs  mwo_types.rs  pak_archive.rs  reparse_main.rs  some.rs
static/: .gitignore  index.html  mechdata_combined.min.json  mechdata_combined.pretty.json  style.css
static/pkg/: README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
tools/: publish.ps1
